# wefusion

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  makefile  nginx.conf.template  pyproject.toml  requirements.txt
api/: core.py  main.py  requirements.txt
api/core/: __init__.py  constants.py  http_exceptions.py  security.py
api/crud/: __init__.py  artifact.py  comment.py  exec_task.py  execution.py  search.py  user.py
api/routes/: __init__.py  auth.py  execution.py  providers.py
api/routes/execution/: __init__.py  execution.py
api/routes/search/: __init__.py  search.py
api/routes/user/: __init__.py  account.py  comments.py  gallery.py  history.py  likes.py  user.py
api/schemas/: artifact.py  comment.py  execution.py  search.py  user.py
app/html/: auth.html  find.html  history.html  index.html  likes.html
app/static/css/: auth.css  find.css  main.css
app/static/js/: auth.js  infscroll.js
app/webui/: auth.html  index.html
core/: constants.py  models.py
core/models/: models.py  types.py
core/schemas/: execution.py
core/utils/: prompt_handler.py  settings.py
docker/: api.Dockerfile  nginx.Dockerfile  stable-diffusion.Dockerfile
migrations/: env.py
migrations/versions/: 2022_11_21_1501-91967ee02dc6_initial_migration.py  2022_11_25_1450-cfdbd0889829_add_filename.py  2022_12_11_1500-78deb2019b8b_feature_user_likes.py  2022_12_21_0132-d5443c6592b9_add_user_artifact_comment_table.py
stable_diffusion/: connection.py  interface.py  main.py  requirements.txt  settings.py
(+4 files in other folders)
