[tool.poetry]
authors = ["Stanislav Lyubovsky <wallseat@gmail.com>", "Akimov Rustam <akirusprod@gmail.com>"]
description = ""
include = [
  {path = "core"},
  {path = "api"},
  {path = "stable_diffusion"},
]
license = "MIT"
name = "wefusion"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
SQLAlchemy = "^1.4.44"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
python = "^3.10"

[tool.poetry.group.api.dependencies]
aio-pika = "^8.2.4"
asyncpg = "^0.27.0"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-multipart = "^0.0.5"

[tool.poetry.group.stable-diffusion.dependencies]
diffusers = "0.4.0"
ftfy = "^6.1.1"
pika = "^1.3.1"
scipy = "^1.9.3"
torch = "^1.13.0"
transformers = "^4.24.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
matplotlib = "^3.6.2"
pre-commit = "^2.20.0"
pika-stubs = "^0.1.3"
sqlalchemy2-stubs = "^0.0.2a29"


[tool.poetry.group.deploy.dependencies]
alembic = "^1.8.1"
alembic-utils = "^0.7.8"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
